<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhereDidMoneyGo</string>
    <string name="action_settings">Settings</string>
    <string name="setting">&#160;&#160;设  置&#160;&#160;</string>
    <string name="set_start_time">设置查询开始时间</string>
    <string name="set_end_time">设置查询截止时间</string>
    <string name="yes_string">确 定</string>
    <string name="no_string">取  消</string>
    <string name="add_income">增加（修改）收入</string>
    <string name="add_outcome">增加（修改）支出的类别或钱数</string>
    <string name="can_modify_money">可分配的Money：</string>
    <string name="total_outcome">总支出：</string>
    <string name="total_income">总收入：</string>
    <string name="add_outcome_category">新增支出类别</string>
    <string name="add_outcome_money">增加修改支出</string>
</resources>
